# topconf-paper-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: pages.yml
app/: __init__.py  cli.py  main.py  schemas.py  web.py
app/adapters/: __init__.py  acm_dl.py  base.py  cvf.py  dblp.py  openalex.py  openreview.py  usenix.py
app/api/routes/: __init__.py  conferences.py  crawl.py  (+1 more)
app/core/: config.py
app/db/: models.py  session.py
app/services/: abstract_enrichment.py  classification.py  conference_registry.py  crawl.py  dedup.py  ingestion_pipeline.py  venue_validation.py
configs/conferences/: top_conferences.yaml
configs/taxonomy/: tags.yaml
docs/: api.md  architecture.md  data-model.md  index.md  mvp-roadmap.md
docs/.vitepress/: config.mjs  generated-sidebar.mjs
docs/conferences/: aaai.md  acl.md  asplos.md  colt.md  conext.md  cvpr.md  eccv.md  emnlp.md  eurosys.md  fast.md  hpca.md  iccv.md  iclr.md  icml.md  ijcai.md  imc.md  index.md  infocom.md  isca.md  kdd.md  micro.md  mobicom.md  naacl.md  neurips.md  nsdi.md  sigcomm.md  sigmetrics.md
docs/domains/: ai.md  architecture.md  index.md  network.md
docs/years/: 2022.md  2023.md  2024.md  2025.md  2026.md  index.md
scripts/: audit_and_clean_database.py  build_static_site.sh  enrich_and_summarize.sh  export_static_site.py  refresh_and_recollect.sh  summarize_database.py
tests/: test_acm_dl_adapter.py  test_api.py  test_cvf_adapter.py  test_dedup_classification.py  test_ingestion_pipeline.py  test_registry.py  test_venue_validation.py
(+4 files in other folders)
